# ori-kin

./: .gitignore  README.md  app.py  pyproject.toml  run.py  wsgi.py
.github/workflows/: deploy-gh-pages.yml
app/: __init__.py  callbacks.py  config.py  layout.py  main.py
app/config/: barrel_vault_config.yaml  double_barrel_vault_config.yaml  pseudo_dome_config.yaml
app/utils/: barrel_vault.py  barrel_vault_double.py  barrel_vault_export.py  barrel_vault_single.py  calculations.py  common_utils.py  config_loader.py  export.py  pattern_generator.py
web-app/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web-app/public/: index.html  styles.css
web-app/public/config/: double_barrel_vault_config.json  pseudo_dome_config.json
web-app/src/: app.ts  index.ts
web-app/src/config/: barrel_vault_config.ts  pseudo_dome_config.ts
web-app/src/utils/: barrel_vault.ts  calculations.ts  common.ts  configLoader.ts  double_barrel_vault.ts  export.ts  pattern_generator.ts
