[tool.poetry]
name = "pseudo_dome_pattern_generator"
version = "0.1.0"
description = ""
authors = ["sinanus <sinankaraveli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.18.1"
plotly = "^5.24.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
